#5 Footer still not fixed, but I completely reorganized the CSS file to be more readable so that future pages will be easier to work on.

--- a/style.css
+++ b/style.css
@@ -22,26 +22,12 @@ body {
     padding: 0;
 }
 
-.header{
-    background-color: var(--white);
-    color: var(--blue);
-    width: 100%;
-    height: 100px;
-    margin-top: 0px;
-}
-
 h1 {
     margin: 0px;
     text-align: center;
     padding-top: 25px;
     font-weight: normal;
     font-size: 2em;
-}
-
-.menu{
-    display: flex;
-    justify-content: left;
-    background-color:var(--white);
 }
 
 h3{
@@ -53,6 +39,83 @@ h3{
     padding-top: 0;
     padding-bottom: 20px;
     margin: 0;
+}
+
+a{
+    text-decoration: none;
+}
+
+/*HEADER STYLE*/
+
+.header{
+    background-color: var(--white);
+    color: var(--blue);
+    width: 100%;
+    height: 10%;
+    margin-top: 0px;
+}
+
+.sprout-image{
+    display: block;
+    width:40%;
+    margin-left: auto;
+    padding: 0;
+}
+
+.menu{
+    display: flex;
+    justify-content: left;
+    background-color:var(--white);
+}
+
+.upload:hover{
+    background-color: var(--red-hover);
+}
+
+.header-text{
+    width: 60%;
+}
+
+.title {
+    display: flex;
+    justify-content: left;
+}
+
+.menu-button:hover {
+    color: var(--blue-hover)
+}
+
+.cur-page {
+    color: var(--blue-hover)
+}
+
+/*FOOTER*/
+
+.footer-bar {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 7%;
+    background-color: var(--white);
+    color: var(--blue);
+    padding: 10px;
+  }
+
+.footer-text{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 7%;
+}
+
+/*HOME BODY STYLE*/
+
+.home-body{
+    height: 83%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .samples{
@@ -74,7 +137,7 @@ h3{
 }
 
 .sample-images{
-    height: 300px;
+    height: 300px; /* TO BE FIXED W REAL IMAGES */
 }
 
 .graph{
@@ -93,54 +156,4 @@ h3{
     border-radius: 10px;
     border: none;
     font-size: 1.5em;
-}
-
-.upload:hover{
-    background-color: var(--red-hover);
-}
-
-.sprout-image{
-    display: block;
-    width:40%;
-    margin-left: auto;
-    padding: 0;
-}
-
-.header-text{
-    width: 60%;
-}
-
-.title {
-    display: flex;
-    justify-content: left;
-}
-
-.menu-button:hover {
-    color: var(--blue-hover)
-}
-
-.cur-page {
-    color: var(--blue-hover)
-}
-
-a{
-    text-decoration: none;
-}
-
-.footer-bar {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 7%;
-    background-color: var(--white);
-    color: var(--blue);
-    padding: 10px;
-  }
-
-.footer-text{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 7%;
 }
